common-applications/test-environment/owncloud-server/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: owncloud-server
  name: owncloud-server
