common-applications/test-environment/owncloud-server/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owncloud-server
  namespace: owncloud-server
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: owncloud-server
  template:
    metadata:
      labels:
        app: owncloud-server
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      nodeSelector:
        autoscaler: "true"
      containers:
      - name: server
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/owncloud/server:v10.11
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
        livenessProbe:
          exec:
            command:
            - /usr/bin/healthcheck
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 5
        readinessProbe:
          exec:
            command:
            - /usr/bin/healthcheck
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 5
        volumeMounts:
        - mountPath: /mnt/data
          name: storage-data
      volumes:
      - name: storage-data
        persistentVolumeClaim:
          claimName: owncloud-server-volume
