common-applications/test-environment/owncloud-server/redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: owncloud-server
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: owncloud-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - name: redis
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/discourse/redis:7.0.5
        command:
        - /bin/bash
        - -c
        - exec redis-server --protected-mode no
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
        ports:
        - containerPort: 6379
