common-applications/test-environment/owncloud-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: owncloud-server-service
  namespace: owncloud-server
spec:
  ports:
  - name: https-port
    protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: owncloud-server
  type: ClusterIP
