common-applications/test-environment/owncloud-server/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: owncloud-server-ingress
  namespace: owncloud-server
spec:
  tls:
  - hosts:
    - owncloud.test.osinfra.cn
    secretName: owncloud-server-tls
  rules:
  - host: owncloud.test.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: owncloud-server-service
          servicePort: 80
        path: /
